Fix small sidebar not having scrollbar (#2694)

--- a/custom/panel_templates/Default/assets/css/custom.css
+++ b/custom/panel_templates/Default/assets/css/custom.css
@@ -351,6 +351,12 @@ body {
     .sidebar {
         width: 17rem !important;
     }
+    
+    .sidebar.toggled {
+        width: 7rem !important;
+        overflow-y: scroll;
+        scrollbar-width: thin;
+    }
 
     #content-wrapper {
         margin-left: 17rem !important;
